feat(toml): add support for header comments in TOML parsing and writing